tests/invalid/generic_apply_non_generic_function.wio
@Apply(i32)
fn Echo(value: i32) -> i32 {
    return value;
}

fn Entry() -> i32 {
    return Echo(7);
}
